--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@pixiv/three-vrm": "^0.2.0",
+    "@tensorflow/tfjs": "^1.5.1",
     "ar.js": "^2.1.5",
-    "handtrackjs": "^0.0.13"
+    "handtrackjs": "^0.0.13",
+    "worker-plugin": "^3.2.0"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
@@ -19,6 +21,7 @@
     "typescript": "^3.7.4",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "comlink": "^4.2.0"
   }
 }
